--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,16 @@
-﻿appdirs==1.4.4
-autopep8==2.0.1
-beautifulsoup4==4.11.1
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.6
-cryptography==38.0.4
-dash==2.7.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-Flask==2.2.2
-frozendict==2.3.4
-gunicorn==20.1.0
-html5lib==1.1
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-keras==2.11.0
-lxml==4.9.2
-MarkupSafe==2.1.1
-multitasking==0.0.11
-numpy==1.21.6
-pandas==1.3.5
-pandas-datareader==0.10.0
-plotly==5.11.0
-pycodestyle==2.10.0
-pycparser==2.21
-python-dateutil==2.8.2
-pytz==2022.7
-requests==2.28.1
-scikit-learn==1.0.2
-scipy==1.7.3
-six==1.16.0
-sklearn==0.0.post1
-soupsieve==2.3.2.post1
-tenacity==8.1.0
-threadpoolctl==3.1.0
-urllib3==1.26.13
-webencodings==0.5.1
-Werkzeug==2.2.2
-yfinance==0.2.18
+dash 1.16.2
+dash-core-components-1.12.1
+dash-html-components -1.1.1
+dash-renderer=1.8.2
+dash-table-4.10.1
+Flask 1.1.2
+Flask-Compress==1.5.0
+gunicorn-20.0.4
+Lxml=-4.5.2
+numpy-1.18.5
+pandas 1.1.2
+plotly 4.10.0
+scikit-learn-0.23.2
+scipy-1.5.2
+sklearn=-0.0
+yfinance = 0.1.54
